add market context